# RAE-agentic-memory

./: .gitignore  .venv  AUDIT_REPORT_2026_01_17.md  CHANGELOG.md  DEVELOPER_CHEAT_SHEET.md  Dockerfile  Dockerfile.agent_secure  FINAL_RAE_ENGINEERING_ASSESSMENT.md  PLAN_QUALITY_IMPROVEMENT_2026.md  RAE_SESSION_SUMMARY.md  README.md  REPORT_02_ASYNC_EXECUTION.md  REPORT_07_FAILURE_RECOVERY.md  REPORT_08_CONCEPTUAL_COHERENCE.md  SESSION_INTEGRITY_REPORT.md  STATUS.md  TEST_INVENTORY.txt  TODO.md  builder_fixed.html  builder_v4.html  check_db.py  check_nodes.py  cleanup_duplicates.py  data  docker-compose.dev.yml  docker-compose.hard-frames-lite.yml  docker-compose.secure.yml  docker-compose.test-sandbox.yml  docker-compose.yml  inspect_schema.py  job_log.txt  last-session-on-Lumina.txt  pyproject.toml  requirements-agent-secure.txt  requirements-dev.txt  run_benchmarks_lumina.sh  test_rae_isolation.py  verify_rae_mcp.py  verify_vectors.py
rae-core-rust/: Cargo.toml
rae-core-rust/src/: lib.rs
rae-core-rust/src/models/: mod.rs
rae-core-rust/src/storage/: in_memory.rs  mod.rs
rae-core-rust/src/traits/: embedding.rs  graph.rs  mod.rs  storage.rs
rae-core-rust/src/types/: enums.rs
rae-core-rust/tests/: storage_tests.rs
rae-portal/: main.py
rae-windows/: README.md  build_distribution.py  config.yaml  pyproject.toml  rae-lite.spec  requirements-lite.txt
rae-windows/rae_lite/: config.py  hardware.py  llm_adapter.py  main.py  main_exe.py  server_enhanced.py  service.py  tray.py
rae-windows/rae_lite/ingestion/: ingestor.py  watcher.py
rae-windows/rae_lite/ingestion/channels/: email.py  ui_observer.py
rae-windows/rae_lite/ui/: profile_selector.py
rae-windows/rae_lite/ui/static/: index.html
tmp_node1_sync/integrations/context-watcher/: README.md  pyproject.toml
tmp_node1_sync/integrations/context-watcher/src/context_watcher/: __init__.py  __main__.py  api.py  config.py  rae_client.py  watcher.py
tmp_node1_sync/integrations/gemini-mcp/: README.md  pyproject.toml
tmp_node1_sync/integrations/gemini-mcp/src/gemini_mcp/: __init__.py  __main__.py  server.py
tmp_node1_sync/integrations/mcp/: README.md  pyproject.toml
tmp_node1_sync/integrations/mcp/examples/: USAGE_EXAMPLES.md
tmp_node1_sync/integrations/mcp/examples/configs/: cline-config.json  cursor-config.json
tmp_node1_sync/integrations/mcp/src/rae_mcp/: __init__.py  __main__.py  server.py
tmp_node1_sync/integrations/mcp/tests/: __init__.py  test_mcp_e2e.py  test_mcp_integration.py  test_mcp_load.py  test_pii_scrubber.py  test_server.py
tmp_node1_sync/rae-core/: LICENSE  README.md  pyproject.toml
tmp_node1_sync/rae-core/rae-core/tests/golden/: cosine_similarity_memory_correctness.json  cosine_similarity_sqlite_correctness.json  math_reasoning_pruning.json  math_reasoning_should_continue.json  math_score_memory_standard.json
tmp_node1_sync/rae-core/rae_core/: engine.py  runtime.py  version.py
tmp_node1_sync/rae-core/rae_core/adapters/: __init__.py  postgres.py  postgres_db.py  qdrant.py  redis.py
tmp_node1_sync/rae-core/rae_core/config/: __init__.py  defaults.py  settings.py
tmp_node1_sync/rae-core/rae_core/context/: __init__.py  builder.py  window.py
tmp_node1_sync/rae-core/rae_core/embedding/: manager.py
tmp_node1_sync/rae-core/rae_core/exceptions/: base.py
tmp_node1_sync/rae-core/rae_core/guards/: __init__.py  isolation.py
tmp_node1_sync/rae-core/rae_core/interfaces/: __init__.py  agent.py  cache.py  database.py  embedding.py  graph.py  llm.py  storage.py  sync.py  vector.py
tmp_node1_sync/rae-core/rae_core/layers/: __init__.py  base.py  longterm.py  reflective.py  sensory.py  working.py
tmp_node1_sync/rae-core/rae_core/llm/: __init__.py  config.py  fallback.py  orchestrator.py  strategies.py
tmp_node1_sync/rae-core/rae_core/math/: __init__.py  controller.py  dynamics.py  fusion.py  policy.py  quality_metrics.py  reasoning.py  resonance.py  stability.py  structure.py  tuning.py
tmp_node1_sync/rae-core/rae_core/models/: __init__.py  context.py  graph.py  interaction.py  memory.py  reflection.py  scoring.py  search.py  sync.py
tmp_node1_sync/rae-core/rae_core/reflection/: __init__.py  actor.py  engine.py  evaluator.py  reflector.py
tmp_node1_sync/rae-core/rae_core/scoring/: decay.py
tmp_node1_sync/rae-core/rae_core/search/: __init__.py  cache.py  engine.py
tmp_node1_sync/rae-core/rae_core/sync/: __init__.py  diff.py  encryption.py  manager.py  merge.py  protocol.py
tmp_node1_sync/rae-core/rae_core/types/: enums.py
tmp_node1_sync/rae-core/tests/: test_wildcard.py
tmp_node1_sync/rae-core/tests/golden/: cosine_similarity_memory_correctness.json  cosine_similarity_sqlite_correctness.json  math_cosine_similarity.json  math_reasoning_should_continue.json  math_score_memory_standard.json
tmp_node1_sync/rae-core/tests/math/: test_resonance.py  test_tuning.py
tmp_node1_sync/rae-core/tests/rae_core/: conftest.py
tmp_node1_sync/rae-core/tests/unit/: conftest.py  test_engine.py  test_engine_extra.py  test_final_coverage.py  test_rae_first.py  test_version.py
tmp_node1_sync/rae_adapters/: cache.py  infra_factory.py  postgres.py  postgres_adapter.py  pyproject.toml  qdrant.py  qdrant_adapter.py  redis.py  redis_adapter.py  storage.py  vector.py
tmp_node1_sync/rae_adapters/memory/: __init__.py  storage.py  vector.py
tmp_node1_sync/rae_adapters/sqlite/: storage.py  vector.py
tmp_node1_sync/sdk/python/rae_memory_sdk/: README.md  __init__.py  client.py  decorators.py  models.py  pyproject.toml
tmp_node1_sync/tools/memory-dashboard/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
tmp_node1_sync/tools/memory-dashboard/.streamlit/: config.toml
tmp_node1_sync/tools/memory-dashboard/pages/: 1_📅_Timeline.py  2_🕸️_Knowledge_Graph.py  3_✏️_Memory_Editor.py  4_🔍_Query_Inspector.py
tmp_node1_sync/tools/memory-dashboard/tests/: __init__.py  test_api_client.py  test_visualizations.py
tmp_node1_sync/tools/memory-dashboard/utils/: __init__.py  api_client.py  visualizations.py
(+1540 files in other folders)
