[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rae-core"
version = "0.6.0"
description = "Reflective Agentic Memory Core"
readme = "README.md"
authors = [
    {name = "Grzegorz Leśniowski", email = "contact@dreamsoft.pro"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "memory", "agents", "rag", "cognitive-architecture"]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "typing-extensions>=4.0",
    "cryptography>=41.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
# Production adapters
postgres = [
    "asyncpg>=0.29",
]
redis = [
    "redis>=5.0",
]
qdrant = [
    "qdrant-client>=1.7",
]
# All production adapters
all = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "qdrant-client>=1.7",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/dreamsoft-pro/RAE-agentic-memory"
Documentation = "https://github.com/dreamsoft-pro/RAE-agentic-memory/tree/main/rae-core"
Repository = "https://github.com/dreamsoft-pro/RAE-agentic-memory.git"
Issues = "https://github.com/dreamsoft-pro/RAE-agentic-memory/issues"

[tool.setuptools]
packages = ["rae_core"]

[tool.setuptools.package-data]
rae_core = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501", # Line too long
    "UP035", # Deprecated types
    "B008", # Function call in argument defaults
    "N806", # Variable name should be lowercase
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
