[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rae-mcp-server"
version = "1.4.0"
description = "MCP Server for RAE (Reflective Agentic Engine)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Grzegorz Leśniowski", email = "lesniowskig@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "memory", "ai", "rag", "context", "rae"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.39.0,<2.0.0",
    "opentelemetry-sdk>=1.39.0,<2.0.0",
    "opentelemetry-instrumentation-httpx==0.60b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
rae-mcp-server = "rae_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/dreamsoft-pro/RAE-agentic-memory"
Documentation = "https://github.com/dreamsoft-pro/RAE-agentic-memory/tree/main/docs"
Repository = "https://github.com/dreamsoft-pro/RAE-agentic-memory"
Issues = "https://github.com/dreamsoft-pro/RAE-agentic-memory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "load: marks tests as load tests (requires significant resources)",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
