[project]
name = "rae-memory-sdk"
version = "0.2.0"
description = "Python client for RAE (Reflective Agentic Memory Engine)"
authors = [
  { name = "Grzegorz Leśniowski", email = "lesniowskig@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dreamsoft-pro/RAE-agentic-memory"
Repository = "https://github.com/dreamsoft-pro/RAE-agentic-memory"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rae_memory_sdk*"]
